feat: added doc for LifeSchool and LifeSchool controllers
